--- a/views/api.html
+++ b/views/api.html
@@ -15,6 +15,8 @@
       <div class="form-group">
         <label>Service name</label>
         <input type="text" name="name" class="form-control" required>
+         <label>Location name</label>
+        <input type="text" name="location" class="form-control" required>
       </div>
       <button type="submit" class="btn btn-default">Save</button>
     </form>
@@ -26,6 +28,15 @@
     <ul>
     {% for hand in docs %}
       <li><a href="update/{{hand.id}}">{{hand.name}}</a></li>
+
+    {% endfor %}
+    </ul>
+<hr><br>
+<h2>All Services</h2>
+
+    <ul>
+    {% for hand in docs %}
+      <li><a href="update/{{hand.id}}">{{hand.location}}</a></li>
 
     {% endfor %}
     </ul>
