--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,9 @@
 
     <h1>{{ title }}</h1>
     <p>Welcome to {{ title }}</p>
-
+    The main API lies here: <a href="https://demo211.herokuapp.com/api/">https://demo211.herokuapp.com/api/</a>
+    and https://demo211.herokuapp.com/api/super    update in not working properly. delete is OK. Insert is OK.
+    
   </div>
 
 {% endblock %}
