--- a/views/update.html
+++ b/views/update.html
@@ -11,9 +11,9 @@
 
     <br>
 
-    <form method="post" action="/api/update/{{hand.id}}?_method=PUT">
+    <form method="post" action="/api/super/update/{{hand.id}}?_method=PUT">
       <div class="form-group">
-        <label>Superhero name</label>
+        <label>Service name</label>
         <input type="text" name="name" class="form-control" value="{{hand.name}}" required>
       </div>
       <button type="submit" class="btn btn-default">Update</button>
@@ -21,7 +21,7 @@
 
     <br>
 
-    <form method="post" action="/api/update/{{hand.id}}?_method=DELETE" class="form-inline">
+    <form method="post" action="/api/super/update/{{hand.id}}?_method=DELETE" class="form-inline">
       <button type="submit" class="btn btn-default">Delete</button>
     </form>
 
