--- a/views/api.html
+++ b/views/api.html
@@ -27,7 +27,7 @@
 
     <ul>
     {% for hand in docs %}
-      <li><a href="update/{{hand.id}}">{{hand.name}}</a> --- {{hand.location}}</li>
+      <li><a href="/api/update/{{hand.id}}">{{hand.name}}</a> --- {{hand.location}}</li>
 
     {% endfor %}
     </ul>
