--- a/views/update.html
+++ b/views/update.html
@@ -18,7 +18,14 @@
       </div>
       <button type="submit" class="btn btn-default">Update</button>
     </form>
-
+    <br>
+ <form method="post" action="/api/update/{{hand.id}}?_method=PUT">
+      <div class="form-group">
+        <label>Location name</label>
+        <input type="text" name="location" class="form-control" value="{{hand.location}}" required>
+      </div>
+      <button type="submit" class="btn btn-default">Update</button>
+    </form>
     <br>
 
     <form method="post" action="/api/update/{{hand.id}}?_method=DELETE" class="form-inline">
