updated with GET function

--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,9 @@
 
     <h1>{{ title }}</h1>
     <p>Welcome to {{ title }}</p>
-
+    <p>To access this api Go to <code>/api/super</code> and then You can add delete update.</p>
+    <p>Search services location wise: <code>/api/super/sr/*******</code>  in the place of <code>*******</code> pass the exact Location Name listed before.{Case sensitive}</p>and
+    <p>Search locations service wise: <code>/api/super/loc/*******</code>  in the place of <code>*******</code> pass the exact service Name listed before.{Case sensitive}</p>
   </div>
 
 {% endblock %}
