small change for photo upload

--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,7 @@
     <p>To access this api Go to <code>/api/super</code> and then You can add delete update.</p>
     <p>Search services location wise: <code>/api/super/sr/*******</code>  in the place of <code>*******</code> pass the exact Location Name listed before.{Case sensitive}</p>and
     <p>Search locations service wise: <code>/api/super/loc/*******</code>  in the place of <code>*******</code> pass the exact service Name listed before.{Case sensitive}</p>
+    <p>To get al the locations just do this <code>/super/locations</code></p>
   </div>
 
 {% endblock %}
