--- a/views/layout.html
+++ b/views/layout.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>{{ title }}</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/public/stylesheets/style.css">
   </head>
   <body>
     {% block content %}
